--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,12 +48,11 @@
     <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-12">
       <div class="row-picture">
-        <img id="about" class="logo-img" src="{{ site.logo }}" height="75px" width="75px">
+        <img id="about" class="logo-img" src="{{ site.baseurl }}/static/img/avatar.png" height="75px" width="75px">
       </div>
       <div class="row-details">
-      <h4 class="list-group-item-heading">{{ site.author }}</h4>
+      <h4 class="list-group-item-heading">{{ site.title }}</h4>
       <p class="list-group-item-text">{{ site.about }}</p>
-      {% include social_links.html %}
       </div>
         <div class="navbar-header pull-right">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -90,10 +89,7 @@
                 <div class="row">
                   <div class="col-md-12 col-xs-12 footer">
                 <footer>
-                    © Copyright text here
-
-                    - <a href="#">Privacy link</a> - Powered by Jekyll.
-
+                  <a href="https://github.com/awslabs/amazon-kinesis-client/blob/master/LICENSE.txt">License</a> - Powered by Jekyll.
                 </footer>
             </div>
                 </div>
